[package]
name = "rlctl"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hid-cli = { git = "https://github.com/ryankurte/rust-hid-cli.git" }
structopt = "0.3.20"
simplelog = "0.8.0"
log = "0.4.11"
