[package]
description = "SAMD21/WS2812 ringlight firmware utility"
repository = "https://github.com/ryankurte/ringlight"
authors = ["ryan kurte <ryankurte@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rlfw"
version = "0.1.0"
license = "MPL-2.0"

[features]
bootloader-xiao = []

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
alloc-cortex-m = "0.4.0"
panic-abort = "0.3.2"
usbd-hid = "0.4.4"
debouncr = "0.1.3"
base64 = { version = "*", features = [ "alloc" ], default-features = false }
log = "0.4.11"
smart-leds = "0.3.0"
ws2812-nop-samd21 = "0.3.0"
ws2812-spi = { version = "0.3.0", features = [ "mosi_idle_high" ] }
volatile = "0.4.1"

[dependencies.atsamd-hal]
version = "0.10.1"
features = ["samd21g-rt", "usb", "unproven"]
default-features = false

[dependencies.xiao_m0]
version = "0.7.0"
features = [ "usb" ]

[dependencies.usb-device]
version = "~0.2"

[dependencies.usbd-serial]
version = "~0.1"


# this lets you use `cargo fix`!
[[bin]]
name = "rlfw"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
